# shcmder

./: README.md  pyproject.toml
src/shcmder/: shcmder.py
