[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shcmder"
version = "0.0.2"
authors = [
  { name="Manny Berrueta", twitter="@ManuelBerrueta" },
]
description = "shcmder is a shim for running shell commands and programs as a subprocess through python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ManuelBerrueta/shcmder"
"Bug Tracker" = "https://github.com/ManuelBerrueta/shcmder/issues"